--- a/ClientChatroom.fxml
+++ b/ClientChatroom.fxml
@@ -27,7 +27,7 @@
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
          <children>
-            <TextField />
+            <TextField fx:id="messageField" />
          </children>
       </GridPane>
    </bottom>
