--- a/ClientLobby.fxml
+++ b/ClientLobby.fxml
@@ -3,35 +3,45 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="assignment7.ClientLobbyController">
-   <center>
-      <ListView fx:id="lobbyChats" prefHeight="333.0" prefWidth="400.0" BorderPane.alignment="CENTER" />
-   </center>
-   <right>
-      <ListView fx:id="lobbyClients" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
-   </right>
-   <bottom>
-      <GridPane BorderPane.alignment="CENTER_RIGHT">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="198.0" minWidth="10.0" prefWidth="189.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <Button fx:id="startChat" mnemonicParsing="false" prefHeight="31.0" prefWidth="141.0" text="Start Chatroom" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-            <Button fx:id="joinChat" alignment="CENTER" mnemonicParsing="false" prefHeight="31.0" prefWidth="132.0" text="Join Chatroom" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.valignment="CENTER" />
-         </children>
-         <padding>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </padding>
-      </GridPane>
-   </bottom>
-</BorderPane>
+<TabPane xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="assignment7.ClientLobbyController">
+   <tabs>
+      <Tab closable="false" text="Lobby">
+         <content>
+            <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0">
+               <center>
+                  <ListView fx:id="lobbyChats" prefHeight="333.0" prefWidth="400.0" BorderPane.alignment="CENTER" />
+               </center>
+               <right>
+                  <ListView fx:id="lobbyClients" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+               </right>
+               <bottom>
+                  <GridPane BorderPane.alignment="CENTER_RIGHT">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="198.0" minWidth="10.0" prefWidth="189.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Button fx:id="startChat" mnemonicParsing="false" prefHeight="31.0" prefWidth="141.0" text="Start Chatroom" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                        <Button fx:id="joinChat" alignment="CENTER" mnemonicParsing="false" prefHeight="31.0" prefWidth="132.0" text="Join Chatroom" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.valignment="CENTER" />
+                     </children>
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                  </GridPane>
+               </bottom>
+            </BorderPane>
+         </content>
+      </Tab>
+   </tabs>
+</TabPane>
